Box and word lifecycle v1